--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.2.1",
+        "@inertiajs/inertia": "^0.10.0",
+        "@inertiajs/inertia-vue3": "^0.5.1",
+        "@inertiajs/progress": "^0.2.6",
+        "@popperjs/core": "^2.10.2",
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/typography": "^0.5.0",
+        "@vue/compiler-sfc": "^3.0.5",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21.4",
+        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.39",
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.2.19",
-        "vue-loader": "^17.0.0"
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^3.0.0",
+        "vue": "^3.0.5",
+        "vue-loader": "^16.1.2",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "vue": "^3.2.26",
