--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "inertiajs/inertia-laravel": "^0.4.5",
         "laravel/framework": "^8.65",
+        "laravel/jetstream": "^2.5",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-      "ext-http": "*"
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
